--- a/package.json
+++ b/package.json
@@ -1,29 +1,33 @@
 {
-  "version": "1.0.0",
-  "description": "My webpack project",
-  "name": "my-webpack-project",
-  "scripts": {
-    "build": "webpack --mode=production --node-env=production",
-    "build:dev": "webpack --mode=development",
-    "build:prod": "webpack --mode=production --node-env=production",
-    "watch": "webpack --watch",
-    "serve": "webpack serve"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.17.5",
-    "@babel/preset-env": "^7.16.11",
-    "autoprefixer": "^10.4.2",
-    "babel-loader": "^8.2.3",
-    "css-loader": "^6.6.0",
-    "html-webpack-plugin": "^5.5.0",
-    "postcss": "^8.4.6",
-    "postcss-loader": "^6.2.1",
-    "prettier": "^2.5.1",
-    "sass": "^1.49.8",
-    "sass-loader": "^12.6.0",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.69.1",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4"
-  }
+    "version": "1.0.0",
+    "description": "My webpack project",
+    "name": "my-webpack-project",
+    "scripts": {
+        "build": "webpack --mode=production --node-env=production",
+        "build:dev": "webpack --mode=development",
+        "build:prod": "webpack --mode=production --node-env=production",
+        "watch": "webpack --watch",
+        "serve": "webpack serve",
+        "deploy": "gh-pages -d dist"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.17.5",
+        "@babel/preset-env": "^7.16.11",
+        "autoprefixer": "^10.4.2",
+        "babel-loader": "^8.2.3",
+        "copy-webpack-plugin": "^10.2.4",
+        "css-loader": "^6.6.0",
+        "gh-pages": "^3.2.3",
+        "html-webpack-plugin": "^5.5.0",
+        "postcss": "^8.4.6",
+        "postcss-loader": "^6.2.1",
+        "prettier": "^2.5.1",
+        "raw-loader": "^4.0.2",
+        "sass": "^1.49.8",
+        "sass-loader": "^12.6.0",
+        "style-loader": "^3.3.1",
+        "webpack": "^5.69.1",
+        "webpack-cli": "^4.9.2",
+        "webpack-dev-server": "^4.7.4"
+    }
 }
